fixed cart-wrap width

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -251,7 +251,7 @@ a:hover {
   border: 1px solid #DFDFDF;
 }
 .cart-wrap {
-  width: 150px;
+  width: 152px;
   top: 0;
   right: 0px;
 }
